--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "mistify",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1-alpha.7",
+  "private": false,
+  "license": "MIT",
+  "author": "Steve Calverley <emailme@tameablemist.com> (http://mistify.tameablemist.com/)",
+  "main": "dist/mistify.common.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-storybook-docs": "build-storybook --docs -s public",
+    "chromatic": "npx chromatic"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
     "@storybook/addon-links": "^6.1.14",
@@ -30,12 +35,16 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7.0.35",
     "prettier": "^1.19.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
